# 3Dtree

./: .gitignore  3Dtree.pro  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
3Dtree/: 3Dtree.pro  CMakeLists.txt  branch.cpp  branch.hpp  camera_controller.cpp  camera_controller.hpp  constants.hpp  leaf.cpp  leaf.hpp  leaf_geometry.cpp  leaf_geometry.hpp  leaf_mesh.cpp  leaf_mesh.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  resources.qrc
3Dtree/res/: leaf.blend  leaf.blend1  leaf.mtl  skybox_negx.tga  skybox_negy.tga  skybox_negz.tga  skybox_posx.tga  skybox_posy.tga  skybox_posz.tga
